objects/Estate_Asset__c/fields/BV_Case__c.field-meta.xml
<CustomField>
    <fullName>BV_Case__c</fullName>
    <label>BV Case</label>
    <referenceTo>BV_Case__c</referenceTo>
    <relationshipLabel>Estate Assets</relationshipLabel>
    <relationshipName>Estate_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>