objects/Estate_Asset__c/fields/Client_DR__c.field-meta.xml
<CustomField>
    <fullName>Client_DR__c</fullName>
    <label>Client DR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>