objects/Estate_Asset__c/fields/Date_of_Death_Value_del__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Death_Value_del__c</fullName>
    <label>Date of Death Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>