objects/Estate_Asset__c/fields/Office_CR__c.field-meta.xml
<CustomField>
    <fullName>Office_CR__c</fullName>
    <label>Office CR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>