objects/Estate_Asset__c/fields/Value_of_Assets_Collected_del__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Assets_Collected_del__c</fullName>
    <label>Value of Assets Collected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>